<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/rounded_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">


        <ImageView

            android:id="@+id/profileImageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/rice_logo"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />


        <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />


</LinearLayout>
